Version 0.60.0
--------------
  * New distance argument for estimate_xmin and bootstrap functions. No longer limited
  to the KS distance measure.

Version 0.50.1 (not on CRAN)
----------------------------
 * Bug fix: Export get_n in bootstrap_p. Fix for https://github.com/csgillespie/poweRlaw/issues/53. Thanks to @AnaCG for reporting.

Version 0.50.0
----------------------------
 * Added get_ntail function which returns the number of points  greater than or equal to xmin.
 * Added get_n function which returns the sample size.
 * Bug fix: bootstrap_p was incorrect for CTN models (https://github.com/csgillespie/poweRlaw/issues/52). Thanks to @lsaravia for reporting and diagnosing the problem.

Version 0.40.0 (not on CRAN)
----------------------------
 * Add ByteCompile flag. Testing suggests that bootstrapping is now around twice as fast.
 * Added seed and package_version to the output of bootstrap and bootstrap_p. 
 * Added poisson random number generator.

Version 0.30.2
--------------
 * Bug fix: Plotting the data cdf failed when data values were larger than `xmax` 
 (https://github.com/csgillespie/poweRlaw/issues/40). Thanks to @LaurentFranckx

Version 0.30.1
--------------
 * Bug fix: pdf and cdf functions should now handle values of q less than xmin in a 
  sensible way (Thanks to Pierce Brookss)

Version 0.30.0
--------------
 * New package title to satisfy CRAN
 * A new xmax argument has been added to the bootstrap and estimate_xmin functions. 
  This argument limits the search space when calculating the KS statistic. 
 * The all_values argument has been removed from dist_cdf. A new function dist_all_cdf has been created.
 * Added random number generators for log normal and exponential functions (https://github.com/csgillespie/poweRlaw/issues/32)
 * Added seed argument to bootstrap and bootstrap_p functions
 * Added warning message to handle estimation in tail regions (https://github.com/csgillespie/poweRlaw/issues/31)